# tictactoe-gui

./: CMakeLists.txt  README.md  main.cpp
headers/: helpers.h  point.h  ttt.h
src/: helpers.cpp  helpers.h  point.cpp  point.h  ttt.cpp  ttt.h
src/include/: helpers.h  point.h  ttt.h
